
INCLUDES = @GTK_CFLAGS@

noinst_LIBRARIES = libXimd.a

libXimd_a_SOURCES = \
	FrameMgr.c \
	FrameMgr.h \
	IMConn.c \
	IMMethod.c \
	IMValues.c \
	IMdkit.h \
	Xi18n.h \
	Xi18nX.h \
	XimFunc.h \
	XimProto.h \
	i18nAttr.c \
	i18nClbk.c \
	i18nIMProto.c \
	i18nIc.c \
	i18nMethod.c \
	i18nPtHdr.c \
	i18nUtil.c \
	i18nX.c

EXTRA_DIST = doc
