AC_INIT(src/nabi.h)

AM_INIT_AUTOMAKE(nabi, 0.2)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs
AC_PROG_CC
AC_OBJEXT
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Checks for libraries.
AC_PATH_PROG(PKG_CONFIG, pkg-config,
	     AC_MSG_ERROR([ximhangul needs pkg-config]))
PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.0.0,,
		  AC_MSG_ERROR([ximhangul needs GTK+ 2.0.0 or higher]))

dnl Checks for header files.
AC_PATH_X
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([langinfo.h libintl.h locale.h malloc.h stddef.h stdint.h stdlib.h string.h sys/param.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gethostname memmove memset mkdir nl_langinfo setlocale strcasecmp strtol])

dnl gettext stuff
AM_GNU_GETTEXT([external])

AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$PACKAGE", gettext package name)

dnl data dir
NABI_DATA_DIR="${datadir}/$PACKAGE"
NABI_THEMES_DIR="${NABI_DATA_DIR}/themes"
AC_SUBST(NABI_DATA_DIR)
AC_SUBST(NABI_THEMES_DIR)

AC_OUTPUT([
Makefile
IMdkit/Makefile
src/Makefile
tables/Makefile
themes/Makefile
themes/SimplyRed/Makefile
themes/MSWindows/Makefile
themes/Mac/Makefile
themes/Onion/Makefile
themes/KingSejong/Makefile
themes/keyboard/Makefile
m4/Makefile 
po/Makefile.in 
])
