simplyreddir= @NABI_THEMES_DIR@/SimplyRed
simplyred_DATA = SimplyRed/none.png SimplyRed/hangul.png SimplyRed/english.png

mswindowsdir= @NABI_THEMES_DIR@/MSWindows
mswindows_DATA = MSWindows/none.png MSWindows/hangul.png MSWindows/english.png

mswindowsxpdir= @NABI_THEMES_DIR@/MSWindowsXP
mswindowsxp_DATA = MSWindowsXP/none.png MSWindowsXP/hangul.png MSWindowsXP/english.png

macdir= @NABI_THEMES_DIR@/Mac
mac_DATA = Mac/README Mac/none.png Mac/hangul.png Mac/english.png

oniondir= @NABI_THEMES_DIR@/Onion
onion_DATA = Onion/README Onion/none.png Onion/hangul.png Onion/english.png

keyboarddir= @NABI_THEMES_DIR@/keyboard
keyboard_DATA = keyboard/README keyboard/none.png keyboard/hangul.png keyboard/english.png

kingsejongdir= @NABI_THEMES_DIR@/KingSejong
kingsejong_DATA = KingSejong/README KingSejong/none.png KingSejong/hangul.png KingSejong/english.png

kingsejong2dir= @NABI_THEMES_DIR@/KingSejong2
kingsejong2_DATA = KingSejong2/README KingSejong2/none.png KingSejong2/hangul.png KingSejong2/english.png

tuxdir= @NABI_THEMES_DIR@/Tux
tux_DATA = Tux/README Tux/none.png Tux/hangul.png Tux/english.png

jinidir= @NABI_THEMES_DIR@/Jini
jini_DATA = Jini/README Jini/none.png Jini/hangul.png Jini/english.png \
	    Jini/none.svg Jini/hangul.svg Jini/english.svg

EXTRA_DIST = \
	$(simplyred_DATA) \
	$(mswindows_DATA) \
	$(mswindowsxp_DATA) \
	$(mac_DATA) \
	$(onion_DATA) \
	$(keyboard_DATA) \
	$(kingsejong_DATA) \
	$(tux_DATA) \
	$(jini_DATA)
