simplyreddir= @NABI_THEMES_DIR@/SimplyRed
simplyred_DATA = SimplyRed/none.png SimplyRed/hangul.png SimplyRed/english.png

oniondir= @NABI_THEMES_DIR@/Onion
onion_DATA = Onion/README Onion/none.png Onion/hangul.png Onion/english.png

keyboarddir= @NABI_THEMES_DIR@/keyboard
keyboard_DATA = keyboard/README keyboard/none.png keyboard/hangul.png keyboard/english.png

kingsejongdir= @NABI_THEMES_DIR@/KingSejong
kingsejong_DATA = KingSejong/README KingSejong/none.png KingSejong/hangul.png KingSejong/english.png

kingsejong2dir= @NABI_THEMES_DIR@/KingSejong2
kingsejong2_DATA = KingSejong2/README KingSejong2/none.png KingSejong2/hangul.png KingSejong2/english.png

tuxdir= @NABI_THEMES_DIR@/Tux
tux_DATA = Tux/README Tux/none.png Tux/hangul.png Tux/english.png

jinidir= @NABI_THEMES_DIR@/Jini
jini_DATA = Jini/README Jini/none.png Jini/hangul.png Jini/english.png \
	    Jini/none.svg Jini/hangul.svg Jini/english.svg

ubuntu_mono_darkdir = ${NABI_THEMES_DIR}/ubuntu-mono-dark
ubuntu_mono_dark_DATA = \
    ubuntu-mono-dark/README \
    ubuntu-mono-dark/english.png \
    ubuntu-mono-dark/hangul.png \
    ubuntu-mono-dark/none.png

ubuntu_mono_lightdir = ${NABI_THEMES_DIR}/ubuntu-mono-light
ubuntu_mono_light_DATA = \
    ubuntu-mono-light/README \
    ubuntu-mono-light/english.png \
    ubuntu-mono-light/hangul.png \
    ubuntu-mono-light/none.png

EXTRA_DIST = \
	$(simplyred_DATA) \
	$(onion_DATA) \
	$(keyboard_DATA) \
	$(kingsejong_DATA) \
	$(kingsejong2_DATA) \
	$(tux_DATA) \
	$(jini_DATA) \
	$(ubuntu_mono_dark_DATA) \
	$(ubuntu_mono_light_DATA)
