
keyboarddir = @NABI_DATA_DIR@/keyboard
keyboard_DATA = \
	keyboard/2qwerty \
	keyboard/32qwerty \
	keyboard/39qwerty \
	keyboard/3sqwerty \
	keyboard/3fqwerty

composedir = @NABI_DATA_DIR@/compose
compose_DATA = compose/default compose/full

candidatedir = @NABI_DATA_DIR@/candidate
candidate_DATA = candidate/nabi.txt

EXTRA_DIST = $(keyboard_DATA) $(compose_DATA) $(candidate_DATA)
